# spawn

./: Cargo.toml  README.md
example/: .gitignore  AndroidManifest.xml  spawn.toml
example/main/java/com/example/: MainActivity.java
src/: build_system.rs  logger.rs  main.rs  parser.rs
src/frontend/: manifest.rs  mod.rs  ninja_generator.rs
src/parser/: manifest_generator.rs  mod.rs  toml_parser.rs
src/resolver/: artifact.rs  cache.rs  local_cache.rs  mod.rs  pom.rs  unpacker.rs
