[package]
name = "spawn"
version = "0.3.1"
edition = "2024"

[dependencies]
thiserror = "1.0"
colored = "3.0.0"
serde = { version = "1.0", features = ["derive"] }
toml = "0.8"
walkdir = "2.4"
quick-xml = "0.31"
reqwest = { version = "0.11", features = ["blocking", "rustls-tls", "hickory-dns"] }
rayon = "1.8"
version-compare = "0.1"
sha2 = "0.10"
dirs = "5.0"
zip = "0.6"